[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/game/GameController.gd" id=1]
[ext_resource type="PackedScene" path="res://scenes/GameOverPanel.tscn" id=2]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MainLayout" type="VBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
alignment = 1

[node name="StatusLabel" type="Label" parent="MainLayout"]
text = "Your turn"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MainLayout"]
columns = 3
custom_minimum_size = Vector2(0, 720)

[node name="Cell0" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell1" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell2" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell3" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell4" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell5" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell6" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell7" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="Cell8" type="Button" parent="MainLayout/GridContainer"]
text = ""
custom_minimum_size = Vector2(180, 180)

[node name="BottomBar" type="HBoxContainer" parent="MainLayout"]
alignment = 1

[node name="RestartButton" type="Button" parent="MainLayout/BottomBar"]
text = "Restart"

[node name="BackButton" type="Button" parent="MainLayout/BottomBar"]
text = "Back to Menu"

[node name="GameOverPanel" parent="."]
instance = ExtResource("2")

